syntax = "proto3";

option go_package="./service_proto";

service UserService {
  rpc GetById (GetUserByIdRequest) returns (GetUserByIdResponse) {}
  rpc GetJwtToken (GetJwtTokenRequest) returns (GetJwtTokenResponse) {}
}

message GetUserByIdRequest {
  int32 id = 1;
}

message GetUserByIdResponse {
  string email = 1;
}

message GetJwtTokenRequest {
  string email = 1;
  string password = 2;
}

message GetJwtTokenResponse {
  string token = 1;
}